Working click to destroy logic on Kube

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,12 +12,28 @@ html, body {
   height: 100%;
   user-select: none;
 }
-img, canvas {
-  /* prevent the save-image on long press on mobile */
-  pointer-events: none;
-}
-#c {
+#threeCanvas {
   width: 100%;
   height: 100%;
   display: block;
+}
+#debugWrapper {
+  pointer-events: none;
+}
+#debugWrapper > #fg {
+  position: absolute; 
+  left: 10px;
+  top: 10px;
+  width:200px; 
+  height:100px; 
+  background-color: yellow;
+}
+#debugWrapper > #bg {
+  z-index: 1;
+  position: absolute;
+  left: 50px;
+  top: 20px;
+  width:100px;
+  height:20px;
+  background-color: green;
 }
