--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,14 @@
-html {
-  box-sizing: border-box;
-}
-body {
-  font-family: sans-serif;
+* {
+  /*remove default padding added by borwser*/
   margin: 0;
-  overflow: hidden;
   padding: 0;
 }
-html, body {
-  margin: 0;
-  height: 100%;
-  user-select: none;
-}
 #threeCanvas {
-  width: 100%;
-  height: 100%;
+  /*should not need to do this*/
+  width: 100%  !important;
+  height: 100% !important;
+  margin: 0;
+  padding: 0;
   display: block;
 }
 #debugWrapper {
@@ -23,7 +17,7 @@ html, body {
   position: absolute; 
   left: 10px;
   top: 10px;
-  width:300px; 
-  height:100px; 
+  width:300px  ; 
+  height:100px ; 
   background-color: transparent;
 }
