--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,8 @@ html, body {
   touch-action: none ;
 }
 #debugWrapper {
-  font-size: 15px;
+  font-size: 12px;
+  font-family: Verdana, sans-serif;
   pointer-events: none;
   position: absolute; 
   left: 10px;
